# dreamerv3-vk

./: .gitignore  OPTIMIZATION.md  README.md  RSSM_OPTIMIZATION.md  bench_limits.py  bench_theoretical.py  eval.py  eval_stochastic.py  pyproject.toml  setup_puffer.py  train.py
examples/: dreamerv3_config.yaml  human_play.py  random_agent.py
puffer_rl/: __init__.py  engine.pyx  model.py  record_video.py  train.py
slither_gym/: __init__.py  registration.py
slither_gym/dreamer/: agent.py  networks.py  replay_buffer.py
slither_gym/engine/: config.py  food.py  game.py  snake.py
slither_gym/env/: rewards.py  slither_env.py
slither_gym/rendering/: numpy_renderer.py
